@@ -24,6 +24,7 @@ typedef struct
     int dump_graphs;
     int optralloc_remat;
     int oldralloc;
+    int salloc;
   }
 Z80_OPTS;
 
@@ -38,6 +39,9 @@ extern Z80_OPTS z80_opts;
 #define OPTRALLOC_HL IS_Z80
 #define OPTRALLOC_A 1
 #define OPTRALLOC_IY !IY_RESERVED
+
+#define SALLOC_TD (z80_opts.salloc == 1)
+#define SALLOC_CH (z80_opts.salloc == 2)
 
 enum
   {
